fixing spacing 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -337,7 +337,7 @@
   /* HEADER */
 
   .header {
-    padding: 20px 0 51px;
+    padding: 0 0 51px;
   }
 
   .header__theme-menu {
